--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.2",
+    "jquery": "node_modules/jquery"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
